@@ -8,13 +8,14 @@ class RemoteElementTest < Test::Unit::TestCase
     @credit_card = credit_card('4000100011112224')
     @check = check
     @options = {
-      order_id: '1',
-      billing_address: address,
-      description: 'Store Purchase'
+      order_id: '2',
+      billing_address: address.merge(zip: '87654'),
+      description: 'Store Purchase',
+      duplicate_override_flag: 'true'
     }
 
     @google_pay_network_token = network_tokenization_credit_card(
-      '4444333322221111',
+      '4000100011112224',
       month: '01',
       year: Time.new.year + 2,
       first_name: 'Jane',
@@ -44,12 +45,12 @@ class RemoteElementTest < Test::Unit::TestCase
     response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Approved', response.message
-    assert_match %r{Street address and postal code do not match}, response.avs_result['message']
+    assert_match %r{Street address and 5-digit postal code match.}, response.avs_result['message']
     assert_match %r{CVV matches}, response.cvv_result['message']
   end
 
   def test_failed_purchase
-    @amount = 20
+    @amount = 51
     response = @gateway.purchase(@amount, @credit_card, @options)
     assert_failure response
     assert_equal 'Declined', response.message
@@ -119,19 +120,65 @@ class RemoteElementTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase_with_duplicate_override_flag
-    response = @gateway.purchase(@amount, @credit_card, @options.merge(duplicate_override_flag: true))
+    options = {
+      order_id: '2',
+      billing_address: address.merge(zip: '87654'),
+      description: 'Store Purchase'
+    }
+
+    response = @gateway.purchase(@amount, @credit_card, options.merge(duplicate_override_flag: true))
     assert_success response
     assert_equal 'Approved', response.message
 
-    response = @gateway.purchase(@amount, @credit_card, @options.merge(duplicate_override_flag: false))
+    response = @gateway.purchase(@amount, @credit_card, options.merge(duplicate_override_flag: 'true'))
     assert_success response
     assert_equal 'Approved', response.message
 
-    response = @gateway.purchase(@amount, @credit_card, @options.merge(duplicate_overrride_flag: 'true'))
-    assert_success response
-    assert_equal 'Approved', response.message
+    # Due to the way these new creds are configured, they fail on duplicate transactions.
+    # We expect failures if duplicate_override_flag: false
+    response = @gateway.purchase(@amount, @credit_card, options.merge(duplicate_override_flag: false))
+    assert_failure response
+    assert_equal 'Duplicate', response.message
 
-    response = @gateway.purchase(@amount, @credit_card, @options.merge(duplicate_override_flag: 'xxx'))
+    response = @gateway.purchase(@amount, @credit_card, options.merge(duplicate_override_flag: 'xxx'))
+    assert_failure response
+    assert_equal 'Duplicate', response.message
+  end
+
+  def test_successful_purchase_with_lodging_and_all_other_fields
+    lodging_options = {
+      order_id: '2',
+      billing_address: address.merge(zip: '87654'),
+      description: 'Store Purchase',
+      duplicate_override_flag: 'true',
+      lodging: {
+        agreement_number: SecureRandom.hex(12),
+        check_in_date: 20250910,
+        check_out_date: 20250915,
+        room_amount: 1000,
+        room_tax: 0,
+        no_show_indicator: 0,
+        duration: 5,
+        customer_name: 'francois dubois',
+        client_code: 'Default',
+        extra_charges_detail: '01',
+        extra_charges_amounts: 'Default',
+        prestigious_property_code: 'DollarLimit500',
+        special_program_code: 'Sale',
+        charge_type: 'Restaurant'
+      },
+      card_holder_present_code: 'ECommerce',
+      card_input_code: 'ManualKeyed',
+      card_present_code: 'NotPresent',
+      cvv_presence_code: 'NotProvided',
+      market_code: 'HotelLodging',
+      terminal_capability_code: 'KeyEntered',
+      terminal_environment_code: 'ECommerce',
+      terminal_type: 'ECommerce',
+      terminal_id: '0001',
+      ticket_number: 182726718192
+    }
+    response = @gateway.purchase(@amount, @credit_card, lodging_options)
     assert_success response
     assert_equal 'Approved', response.message
   end
@@ -166,11 +213,11 @@ class RemoteElementTest < Test::Unit::TestCase
 
     assert capture = @gateway.capture(@amount, auth.authorization)
     assert_success capture
-    assert_equal 'Success', capture.message
+    assert_equal 'Approved', capture.message
   end
 
   def test_failed_authorize
-    @amount = 20
+    @amount = 51
     response = @gateway.authorize(@amount, @credit_card, @options)
     assert_failure response
     assert_equal 'Declined', response.message
